testdata/some/file_7.sg
import foo::{Bar, Baz as BazAlias}; // no error
import foo // error: expected '::' or 'as' or ';' after module path
